<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="42sp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:textColor="@android:color/white"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/custom_signin_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:tag="custom_login_button"
                android:text="@string/action_sign_in_short"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/custom_signup_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:tag="custom_signup_button"
                android:text="@string/action_register"
                android:textColor="@color/colorAccent" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/facebook_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:tag="facebook_login_button"
                    android:text="@string/sign_in_facebook"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/google_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:tag="google_login_button"
                    android:text="@string/sign_in_google"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/logout_button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:visibility="gone"
                    android:text="@string/logout_text"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>